Fix: wrapped scss function so it can run rather than be read

--- a/src/scss/layout/_stack.scss
+++ b/src/scss/layout/_stack.scss
@@ -1,5 +1,5 @@
 .stack {
-  --space: rem-calc(25);
+  --space: #{rem-calc(25)};
 
   justify-content: flex-start;
   @include flex-column;
